[package]
name = "homestuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1" #to find all ips returned by arp -a command
reqwest = { version = "0.11", features = ["blocking", "json"] } #to do requests for APIs